Introduce wrapper for smartcols
Usage example:
Table t;
auto a = t.newColumn("AAA");
auto b = t.newColumn("BBB");
std::shared_ptr<Line> l = t.newLine();

l->getColumnCell(a)->setData("abc");
l->getColumnCell(b)->setData("def");

t.print();

--- a/libdnf/CMakeLists.txt
+++ b/libdnf/CMakeLists.txt
@@ -62,7 +62,9 @@ TARGET_LINK_LIBRARIES(libdnf
                       ${GLIB_GIO_UNIX_LIBRARIES}
                       ${LIBSOLV_LIBRARY}
                       ${LIBSOLV_EXT_LIBRARY}
-                      ${RPMDB_LIBRARY})
+                      ${RPMDB_LIBRARY}
+                      ${SMARTCOLS_LIBRARIES})
+
 IF (WITH_SWDB)
     TARGET_LINK_LIBRARIES(libdnf ${SQLite3_LIBRARIES})
 ENDIF()
